changes in index

--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,6 @@
     <title>Insta-safe</title>
 </head>
 <body>
-    <h1>Hello Git-Hub action</h1>
+    <h1>Hello Git-Hub Action</h1>
 </body>
 </html>
